--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(ChainDMRG)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories( ./include ./src extern/itensor/include)
+include_directories( ./include ./src extern/itensor/include ./extern)
 
 add_library(itensor STATIC IMPORTED)
 
@@ -13,7 +13,7 @@ set(ITENSOR_LINK_FLAGS "-DPLATFORM_openblas -fopenmp -L${CMAKE_SOURCE_DIR}/exter
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ITENSOR_FLAGS}")
 
-add_executable(Chain src/dmrg.cpp src/f_data.cpp src/golden_site.cpp src/haagerup_q_site.cpp src/chain.cpp src/haagerup_site.cpp src/dmrg.h)
+add_executable(Chain src/dmrg.cpp src/f_data.cpp src/golden_site.cpp src/haagerup_q_site.cpp src/chain.cpp src/haagerup_site.cpp src/utility.cpp extern/cxxopts.hpp)
 
 set_property(TARGET itensor PROPERTY IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/extern/itensor/lib/libitensor.a)
 target_link_libraries(Chain itensor "${ITENSOR_LINK_FLAGS}")
