--- a/julia/Project.toml
+++ b/julia/Project.toml
@@ -8,3 +8,4 @@ ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
